results/SVCOMP/conversational/log-ClassCastException3-2024_03_09_13_43_30.txt
class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> \typeof(a) == \type(B);
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (Exception exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:7: error: cannot find symbol
    //@ ensures \result == true <==> \typeof(a) == \type(B);
                                             ^
  symbol:   variable a
  location: class ClassCastException3
1 error

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> true;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (Exception exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (Exception exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

class A {}

class B {}

public class ClassCastException3 {
    //@ ensures \result == false <==> (\exists Exception exc; true);
    //@ ensures \result == true <==> false;
    public static boolean f() {
        try {
            Object a = new A();
            B b = (B) a;
        } catch (ClassCastException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ClassCastException3.java:11: verify: The prover cannot establish an assertion (PossiblyBadCast) in method f: a java.lang.Object cannot be proved to be a B
            B b = (B) a;
                  ^
1 verification failure

